--- a/calculator.html
+++ b/calculator.html
@@ -89,10 +89,10 @@
 
         </form>
     </div>
-    <div class="col-md-9  m-auto ">
+    <div class="col-md-9  m-auto form1">
         <form>
             <div class="row mt-4">
-              <div class=" mb-3 ml-3">
+              <div class=" mb-3 ml-3 form2">
                 <label>Weight g</label>
                 <select class="custom-select d-block w-100" id="WeighG">
                      <option value="">Choose...</option>
@@ -104,7 +104,7 @@
                      <option>600 g</option>
                 </select>
               </div>
-              <div class=" mb-3 ml-3">
+              <div class=" mb-3 ml-3 form2">
                 <label for="state">Weight kg</label>
                 <select class="custom-select d-block w-100" id="WeightKg" required="">
                    <option value="">Choose...</option>
@@ -116,7 +116,7 @@
                      <option>0.6 kg</option>
                 </select>
               </div>
-                <div class=" mb-3 ml-3">
+                <div class=" mb-3 ml-3 form2">
                 <label for="state">Shipping Type</label>
                 <select class="custom-select d-block w-100" id="shippingType" required="">
                    <option value="">Choose...</option>
@@ -128,7 +128,7 @@
                      <option>air</option>
                 </select>
               </div>
-                <div class=" mb-3 ml-3">
+                <div class=" mb-3 ml-3 form2">
                 <label>Country/state</label>
                 <select class="custom-select d-block w-100" id="Weight g" placeholder="Choose">
                      <option value="">Choose...</option>
@@ -139,7 +139,7 @@
                     
                 </select>
               </div>
-              <div class="mb-3 ml-3">
+              <div class="mb-3 ml-3 form2">
                 <label>Coupon Code</label>
                 <input type="text" class="form-control" id="Coupon Code">
                 <div class="invalid-feedback">
@@ -172,7 +172,7 @@
         <br>
     <div class="yashry">
         <div class="row">
-            <div class="col">
+            <div class="col col1">
                 <h5>About us</h5>
                 <p class="text-muted">We're the ones who order and get your items for you, saving you from the hassle of endless waiting and custom charge.</p>
                 <img src="images/500s-demo-day-batch-13-edfa3ly-9-638.jpg" width="100px" height="50px">
@@ -185,7 +185,7 @@
 
 
             </div>
-            <div class="col">
+            <div class="col col2">
                 <h5>Contacts</h5>
                 <p class="text-muted">Talk to us about whatever you like, ask us a question or tell us what you want. We're all ears.</p>
                 <p class="text-muted">Address: El Saaqah St, Inside OCL warehouses , right next to Aramex. Kilo 4.5 . . Sheraton Heliopolis. <a href="#">View map</a></p>
@@ -193,7 +193,7 @@
                 <p class="text-muted">Email:<a href="#"> wecare@edfa3ly.com</a></p>
 
             </div>
-            <div class="col">
+            <div class="col col3">
                 <h5>Newsletter</h5>
                 <p class="text-muted">Join our VIP offer list</p>
                 <input type="email" id="email"class="form-control" placeholder="Enter Your email">
@@ -208,7 +208,7 @@
   <footer class="mt-3 pt-4 text-muted bg-light text-small">
       <div class="container">
         <div class="row">
-           <div class="col-md-9 mb-3">
+           <div class="col-md-9 mb-3 footerf">
                 <ul class="list-inline">
                     <li class="list-inline-item"><a href="#">Privacy</a></li>
                     <li class="list-inline-item"><a href="#">Terms</a></li>
@@ -219,7 +219,7 @@
                     <li class="list-inline-item"><a href="#">Support</a></li>
                 </ul>
             </div>
-            <div class="col-md-3 mb-3">
+            <div class="col-md-3 mb-3 footerc">
                 <p class="mb-1">Copyright © 2020 Edfa3ly.com</p>
             </div>
         </div>
